aws config 파일 변경, 강사/교육생 프로필 수정화면 분리, 강사 메인화면 작업

--- a/config/awsconfig.json
+++ b/config/awsconfig.json
@@ -1,5 +1,5 @@
 {
-    "accessKeyId": "AKIAIHMG5QJBYBANK25Q",
-    "secretAccessKey": "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",
+    "accessKeyId": "AKIAISKXYIZZIH6LVZMA",
+    "secretAccessKey": "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",
     "region": "ap-northeast-1"
 }
