--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
-    "nodemailer": "^6.4.2"
+    "nodemailer": "^6.4.2",
+    "request": "^2.88.2"
   }
 }
